# tf-review-mcp

./: .gitignore  CHANGELOG.md  DESIGN.md  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release-mcp-adversarial.yml
src/tf_review_mcp/: config.py  cost.py  review.py  server.py
tests/: test_cost.py  test_review.py
tests/fixtures/: example_config.yml  example_plan.json  gcp_plan.json
