[project]
name = "tf-review-mcp"
version = "0.3.1"
description = "MCP server that reviews Terraform plans for blast radius, cost, and policy violations"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Sanjeev Kumar" }]
license = { text = "MIT" }
dependencies = [
    "mcp>=1.2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
tf-review-mcp = "tf_review_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tf_review_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"
